# nisqrclib

./: .gitignore  README.md  pyproject.toml
examples/: channel_equalization_demo.py  stm_demo.py  stm_hardware_demo.py
src/nisqrclib/: __init__.py  channel_map.py  cli.py  config.py  hardware.py  paper_params.py  reservoir.py
src/nisqrclib/baselines/: __init__.py
src/nisqrclib/conf/experiment/: default.yaml
src/nisqrclib/conf/reservoir/: channel_map.yaml  channel_map_noisy_shots.yaml  channel_map_paper6.yaml  hardware_trajectory.yaml
src/nisqrclib/tasks/: __init__.py  channel_equalization.py
tests/: test_channel_equalization.py  test_channel_equalization_symbol_task.py
